OPHJOD-3399: Fix issues reported by SonarCloud